<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/login_titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/bright_green"
        android:textStyle="bold"
        android:textSize="50sp"/>

    <EditText
        android:id="@+id/login_usernameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_usernameET_string"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/login_passwordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_passwordET_string"
        android:inputType="textPassword"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/login_loginBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/login_loginBTN_string"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="-or-"/>

    <Button
        android:id="@+id/login_registerBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/login_registerBTN_string"/>

    <TextView
        android:id="@+id/login_forgetTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_forgetTV_string"
        android:textColor="@color/bright_green"/>

</LinearLayout>