<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/finkel_searchFilters"
    android:scrollbars="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/onyx">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/searchfilter_titleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/searchfilter_titleTV_string"
            android:textColor="@color/bright_green"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/light_grey"/>

        <TextView
            android:id="@+id/searchfilter_searchInTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/searchfilter_searchInTV_string"
            android:textStyle="italic"
            android:textSize="20sp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/searchfilter_myCollectionRBN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/searchfilter_myCollectionRBN_string"
                android:textSize="18sp"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/searchfilter_myInboxRBN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/searchfilter_myInboxRBN_string"
                android:textSize="18sp"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/searchfilter_worldwideRBN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/searchfilter_worldwideRBN_string"
                android:textSize="18sp"
                android:onClick="onRadioButtonClicked"/>

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_grey"/>

        <TextView
            android:id="@+id/searchfilter_filterByTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/searchfilter_filterByTV_string"
            android:textSize="20sp"
            android:textStyle="italic"/>

        <CheckBox
            android:id="@+id/searchfilter_nameCBX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/searchfilter_nameFilterCBX_string"
            android:textSize="18sp"/>

        <CheckBox
            android:id="@+id/searchfilter_emailCBX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/searchfilter_emailFilterCBX_string"
            android:textSize="18sp"/>

        <CheckBox
            android:id="@+id/searchfilter_addressCBX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/searchfilter_addressFilterCBX_string"
            android:textSize="18sp"/>

        <CheckBox
            android:id="@+id/searchfilter_phoneCBX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/searchfilter_phoneFilterCBX_string"
            android:textSize="18sp"/>

        <CheckBox
            android:id="@+id/searchfilter_companyCBX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/searchfilter_companyFilterCBX_string"
            android:textSize="18sp"/>

        <CheckBox
            android:id="@+id/searchfilter_professionCBX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/searchfilter_professionFilterCBX_string"
            android:textSize="18sp"/>

        <CheckBox
            android:id="@+id/searchfilter_websiteCBX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/searchfilter_websiteFilterCBX_string"
            android:textSize="18sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_grey"/>

        <TextView
            android:id="@+id/searchfilter_orderByTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/searchfilter_orderByTV_string"
            android:textSize="20sp"
            android:textStyle="italic"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/searchfilter_ascendingRBN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:text="@string/searchfilter_ascendingRBN_string"
                android:textSize="18sp"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/searchfilter_descendingRBN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:text="@string/searchfilter_descendingRBN_string"
                android:textSize="18sp"
                android:onClick="onRadioButtonClicked"/>

        </RadioGroup>


    </LinearLayout>

</ScrollView>