<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/toolbar_settings"
        android:title="@string/toolbar_settings_string"
        android:icon="@mipmap/ic_action_overflow"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/toolbar_search"
        android:title="@string/toolbar_search_string"
        android:icon="@mipmap/ic_action_search"
        android:orderInCategory="200"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/toolbar_newcard"
        android:title="@string/toolbar_newcard_string"
        android:icon="@mipmap/ic_action_new"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"/>

</menu>
