<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/finkelcard_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="1dp"
    card_view:cardBackgroundColor="@color/light_grey"
    card_view:cardElevation="2dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp">
                <ImageView
                    android:id="@+id/finkelcard_logoIV"
                    android:layout_gravity="center"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/place_holder_lancast"/>

                <TextView
                    android:id="@+id/finkelcard_companyTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center"
                    android:text="@string/finkelcard_companyTV_string"
                    android:textColor="@color/onyx"
                    android:textSize="28sp"
                    android:textStyle="bold"/>

            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/finkelcard_fullNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/finkelcard_fullNameTV_string"
            android:textColor="@color/onyx"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/finkelcard_professionTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/finkelcard_professionTV_string"
            android:textColor="@color/onyx"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/finkelcard_addressTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/finkelcard_addressTV_string"
            android:textColor="@color/onyx"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/finkelcard_phoneTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/finkelcard_phoneTV_string"
            android:textColor="@color/onyx"
            android:textSize="22sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/black"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/finkelcard_emailTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/finkelcard_emailTV_string"
                    android:textColor="@color/onyx"
                    android:textSize="22sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="|"
                    android:textColor="@color/onyx"
                    android:textSize="22sp"/>

                <TextView
                    android:id="@+id/finkelcard_websiteTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/finkelcard_websiteTV_string"
                    android:textColor="@color/onyx"
                    android:textSize="22sp"/>

            </TableRow>

        </TableLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>